# AB-Testing

./: .gitignore  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.streamlit/: config.toml
abtest/: __init__.py  calculator.py  simulation.py
docs/: scope.md  the-math.md  validation.md
tests/: test_calculator.py  test_simulation.py
views/: calculator.py  peeking.py
